Fix overlapping issues.

--- a/client/a8c-for-agencies/sections/marketplace/products-overview/product-filter/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/products-overview/product-filter/style.scss
@@ -6,6 +6,7 @@
 .components-popover.is-product-filter {
 	border-radius: 4px;
 	border: 1px solid var(--color-neutral-5);
+	z-index: 1;
 }
 
 .product-filter__group {
